# AuroreMkVII

./: .clang-format  .clang-tidy  .gitignore  2026-03-08-103020-implement-the-following-plan.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  QWEN.md  README.md  spec.md  wcet_analysis.json
.claude/: settings.local.json
AuroreMkVI/: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  QWEN.md  README.md  aimodeltraining.md  cmake_install.cmake  config.json  detect_int8_edgetpu.tflite  labelmap.pbtxt
AuroreMkVI/.qoder/: conductor_persona.md  conductor_rules.md  config.json
AuroreMkVI/commands/conductor/: implement.toml  setup.toml
AuroreMkVI/conductor/: tracks.md
AuroreMkVI/conductor/tracks/track_002_hud_camera_blend/: plan.md  progress.md  results.md  spec.md
AuroreMkVI/conductor/tracks/track_003_performance_quality/: metadata.json  plan.md  progress.md  results.md  spec.md
AuroreMkVI/docs/: AURORE_MK_VI_FULL_PLAN_v2.0.md  operator_manual.md  prompt.txt
AuroreMkVI/include/: force_c_headers.h
AuroreMkVI/include/Eigen/src/Core/: ArrayBase.h
AuroreMkVI/include/Eigen/src/Core/arch/AVX512/: TrsmKernel.h
AuroreMkVI/include/flatbuffers/: buffer.h  vector.h
AuroreMkVI/include/tensorflow/compiler/mlir/lite/ir/: tfl_ops.h
AuroreMkVI/include/tensorflow/compiler/mlir/lite/quantization/common/quantization_lib/: quantization_traits.h
AuroreMkVI/include/tensorflow/compiler/mlir/lite/quantization/ir/: Passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/lite/stablehlo/odml_converter/: passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/lite/stablehlo/transforms/: stablehlo_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/quantization/common/ir/: Passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/quantization/common/quantization_lib/: quantization_traits.h
AuroreMkVI/include/tensorflow/compiler/mlir/quantization/stablehlo/passes/: passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/quantization/stablehlo/passes/bridge/: passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tensorflow/ir/: tf_types.h
AuroreMkVI/include/tensorflow/compiler/mlir/tensorflow/transforms/: passes.h  test_passes.h  tf_saved_model_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tensorflow/transforms/host_runtime/: runtime_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tensorflow/transforms/sparsecore/: sparsecore_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tf2xla/internal/inference/: inference_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tf2xla/internal/passes/: clustering_passes.h  lowering_passes.h  mlir_to_graph_passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tf2xla/transforms/: passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tools/kernel_gen/transforms/: passes.h
AuroreMkVI/include/tensorflow/compiler/mlir/tosa/transforms/: passes.h
AuroreMkVI/include/tensorflow/dtensor/mlir/: create_dtensor_mlir_passes.h
AuroreMkVI/include/tensorflow/lite/: CMakeLists.txt  array.d  array.h  util.d
AuroreMkVI/include/tensorflow/lite/core/c/: common.d
AuroreMkVI/include/tensorflow/lite/profiling/proto/: CMakeLists.txt
AuroreMkVI/include/tensorflow/lite/tools/benchmark/proto/: CMakeLists.txt
AuroreMkVI/scripts/: LINKING_FIX.md  build_static_deps.sh  log_analysis.sh  log_rotate.sh  preflight.sh  qoder-conductor.sh  reload_tpu_modules.sh  run_with_validation.sh  runtime_validator.py  setup_ldconfig.sh  trace_analyzer.py  verify_swiss_watch.sh
AuroreMkVI/src/: CMakeLists.txt  Makefile  application.cpp  application.h  application_supervisor.cpp  application_supervisor.h  atomic_ordering.h  ballistic_safety_test  ballistic_safety_test.cpp  buffer_pool.h  bypass_verification.h  cmake_install.cmake  comprehensive_test.cpp  config_loader.cpp  config_loader.h  control_listener.cpp  data_integrity.h  diagonal_fill_test  discovery_module.cpp  discovery_module.h  dmabuf_pool_test  drm_display.cpp  drm_display.h  drop_oldest_queue.h  evidence_compilation_test  fail_safe_verification  fault_injection.h  fbdev_display.cpp  fbdev_display.h  fire_override_safety.h  font_data.h  formal_verification_test  frame_analyzer.cpp  frame_analyzer.h  geometry_test  geometry_verification.cpp  geometry_verification.h  gles_overlay.cpp  gles_overlay.cpp.backup  gles_overlay.h  (+104 more)
AuroreMkVI/src/camera/: CMakeLists.txt  camera_capture.cpp  camera_capture.h  test_camera.cpp  v4l2_camera.cpp  v4l2_camera.h  v4l2_camera_simple.cpp
AuroreMkVI/src/decision/: CMakeLists.txt  safety_monitor.cpp  safety_monitor.hpp  test_safety.cpp
AuroreMkVI/src/inference/: CMakeLists.txt  adaptive_threshold.frag  gles_utils.cpp  gles_utils.h  gpu_compute.cpp  gpu_detector.cpp  gpu_detector.h  inference.cpp  inference.h  morph_dilate.frag  morph_erode.frag  passthrough.vert  ring_detector  ring_detector_standalone.cpp  shader.frag  shader.vert  test_gpu_detection.cpp  test_gpu_live.cpp  tpu_delegate_chain.cpp  tpu_delegate_chain.h  v4l2_camera_capture.h  zero_copy_input.h
AuroreMkVI/src/monitor/: CMakeLists.txt  monitor.cpp  monitor.h  shared_metrics.hpp  tui_manager.cpp  tui_manager.hpp
AuroreMkVI/src/servo/: CMakeLists.txt  pca9685_controller.cpp  pca9685_controller.h  servo.cpp  servo.hpp  servo_hardware.cpp  servo_hardware.hpp  test_trigger_sanity_check.cpp  trigger_sanity_check.cpp  trigger_sanity_check.h
AuroreMkVI/src/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry.hpp
AuroreMkVI/src/utils/: lockfree_queue.h
aurore-link/: .eslintrc.json  CLAUDE.md  eslint.config.js  index.html  main.js  mock-server.js  package-lock.json  package.json  style.css
aurore_link/: README.md  aurore_pb2.py  client.py  mock_telemetry_server.py  viewer.py
benchmarks/: membench.txt
build-native/: CMakeCache.txt  CTestTestfile.cmake  Makefile  aurore  aurore_timing_tests  ballistics_test  cmake_install.cmake  compile_commands.json  detector_test  fusion_hat_test  hud_socket_test  main_thread_orchestration_test  ring_buffer_test  safety_monitor_fault_codes_test  safety_monitor_test  state_machine_test  state_machine_transitions_test  timing_test  tracker_test
src/: main.cpp
(+259 files in other folders)
